# che

./: CLEANUP_AND_STATUS_REPORT.md  COMMUNITY_COLLABORATION_PLAN.md  CONSTITUTIONAL_COMPLIANCE_EXPERIMENT.py  CONTINUE_EXPERIMENT.py  DATA_VALIDATION_REPORT.md  ENHANCED_COGNITIVE_HETEROSITY_EXPERIMENT.py  ENHANCED_EVOLUTION_EXPERIMENT.py  EXPERIMENT_REPORT.md  FINAL_VALIDATION_REPORT.md  FORMAL_SCIENTIFIC_EXPERIMENT.py  MODEL_INSTALLATION_COMPLETE.md  MODEL_INSTALLATION_GUIDE.md  NATURE_COVER_LETTER.md  OPEN_SOURCE_RELEASE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINAL_STATUS.md  PROJECT_SNAPSHOT_20251227.md  README.md  REAL_SCIENTIFIC_EXPERIMENT_GEMMA3_IMPROVED.py  RELEASE_NOTES.md  SUPPLEMENTARY_INFORMATION.md  check_links.py  check_model_support.py  comprehensive_test.py  contact.html  cross_model_validation.py  cross_model_validation_result_20260315_091350.json  documentation.html  download.html  e2e_simple_test.py  e2e_test.py  en_index.html  experiment.html  faq.html  generate_paper_figures.py  index.html  index_de.html  index_ja.html  integration_test.py  jass_paper_manuscript.md  (+18 more)
.soul/: AUTO_EVOLUTION_GUIDE.md  auto_execute.py  checklists.md  constitution.md  evolution_engine.py  evolution_state.json  protocol.md  publication.md  setup_scheduled_task.ps1  soul_auto_evolve_skill.md  theory.md
MODEL_INSTALLATION_SCRIPTS/: README.md  install_models_linux.sh  install_models_windows.bat
config/: __init__.py  enhanced_experiment_config.py  experiment_config_backup.py  local_experiment_config.py  role_definitions.py
docs/: AWAKENED_AGENT_SRD.md  P5_SPEC.md  (+12 more)
(+173 files in other folders)
