[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = ".git,__pycache__,.eggs,build,dist"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["che"]
known_third_party = ["numpy", "ollama", "openai", "requests", "setuptools"]